# sptorch

./: .gitignore  Cargo.toml  MATH.md  README.md  ci.sh  docs.publish-order.md  docs.release-strategy.md  learn.md  roadmap.md
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/cli-text2sql/: Cargo.toml
crates/cli-text2sql/src/: main.rs
crates/cli-train/: Cargo.toml
crates/cli-train-gpu/: Cargo.toml
crates/cli-train-gpu/src/: main.rs
crates/cli-train/src/: main.rs  train_data.txt
crates/core-autograd/: Cargo.toml
crates/core-autograd/src/: lib.rs
crates/core-ops/: Cargo.toml
crates/core-ops/src/: lib.rs
crates/core-tensor/: Cargo.toml  README.md
crates/core-tensor/src/: lib.rs
crates/data/: Cargo.toml  README.md
crates/data/src/: lib.rs
crates/distributed/: Cargo.toml  build.rs
crates/distributed/proto/: node.proto
crates/distributed/src/: allreduce.rs  checkpoint.rs  coordinator.rs  data_parallel.rs  hardware_parallel.rs  lib.rs  worker.rs
crates/distributed/tests/: test_grpc.rs  test_training_loop.rs
crates/hal/: Cargo.toml
crates/hal-ffi/: Cargo.toml
crates/hal-ffi/include/: sptorch_hal.h
crates/hal-ffi/mock_npu/: mock_npu.c
crates/hal-ffi/src/: lib.rs
crates/hal-ffi/tests/: test_ffi_mock.rs
crates/hal/src/: lib.rs  topology.rs
crates/live-evolution/: Cargo.toml
crates/live-evolution/src/: double_buffer.rs  events.rs  ewc.rs  incremental.rs  lib.rs  monitor.rs  runtime.rs
crates/live-evolution/tests/: test_e2e.rs  test_events_runtime.rs
crates/mock-npu/: Cargo.toml
crates/mock-npu/src/: lib.rs
crates/nn/: Cargo.toml
crates/nn/src/: lib.rs
crates/nn/tests/: test_lora_finetune.rs
crates/optim/: Cargo.toml
crates/optim/src/: lib.rs
crates/runtime-cuda/: Cargo.toml
crates/runtime-cuda/src/: lib.rs
crates/runtime-cuda/tests/: test_gpu_autograd.rs
crates/serialize/: Cargo.toml
crates/serialize/src/: lib.rs  safetensors.rs
crates/sptorch/: Cargo.toml  README.md
crates/sptorch/src/: lib.rs
crates/text2sql/: Cargo.toml
crates/text2sql/src/: feedback.rs  lib.rs  neural.rs  rag.rs  schema.rs  server.rs  sql_constraint.rs  training_data.rs
crates/versioning/: Cargo.toml  README.md
crates/versioning/src/: lib.rs
docs/: phase_a_two_week_sprint.md  rust_pytorch_minigpt_plan_zh.md
products/: Cargo.toml
products/cli-text2sql/: Cargo.toml
products/cli-text2sql/src/: engine.rs  main.rs
products/text2sql/: Cargo.toml
products/text2sql/src/: server.rs  sql_constraint.rs
scripts/: publish-rehearsal.ps1  publish-rehearsal.sh
studio/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
studio/src/: App.tsx  api.ts  index.css  types.ts
studio/src-tauri/: Cargo.toml  tauri.conf.json
studio/src-tauri/capabilities/: default.json
studio/src-tauri/src/: engine_bridge.rs  lib.rs  main.rs
studio/src-tauri/tests/: engine_bridge_integration.rs
studio/src/components/: AutogradVersionGraph.tsx  HardwareFencePanel.tsx  MemorySnapshotPanel.tsx  VersionedDashboard.tsx
studio/src/test/: App.test.tsx  HardwareFencePanel.test.tsx  MemorySnapshotPanel.test.tsx  VersionedDashboard.test.tsx  api.test.ts
