[workspace]
members = [
    "crates/sptorch",
    "crates/core-tensor",
    "crates/core-autograd",
    "crates/core-ops",
    "crates/versioning",
    "crates/hal",
    "crates/nn",
    "crates/optim",
    "crates/data",
    "crates/serialize",
    "crates/runtime-cuda",
    "crates/cli-train",
    "crates/cli-train-gpu",
    "crates/hal-ffi",
    "crates/mock-npu",
    "crates/distributed",
    "crates/live-evolution",
    "studio/src-tauri",
]
resolver = "2"
