[package]
name = "cli-text2sql"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sptorch-text2sql"
path = "src/main.rs"

[dependencies]
text2sql = { path = "../text2sql" }
serialize = { path = "../serialize" }
core-ops = { path = "../core-ops" }
nn = { path = "../nn" }
optim = { path = "../optim" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], default-features = false }
serde_json = "1"
