[package]
name = "sptorch-cli-train-gpu"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "sptorch-train-gpu"
path = "src/main.rs"

[dependencies]
sptorch-runtime-cuda = { version = "0.1.0", path = "../runtime-cuda" }
sptorch-data = { version = "0.1.0", path = "../data" }
rand = "0.8"

