[package]
name = "cli-train"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "sptorch-train"
path = "src/main.rs"

[features]
cuda = ["core-ops/cuda"]

[dependencies]
core-tensor = { path = "../core-tensor" }
core-ops = { path = "../core-ops" }
nn = { path = "../nn" }
optim = { path = "../optim" }
data = { path = "../data" }
serialize = { path = "../serialize" }
rand = "0.8"

