[package]
name = "cli-train"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "sptorch-train"
path = "src/main.rs"

[features]
cuda = ["core-ops/cuda"]

[dependencies]
core-tensor = { version = "0.1.0", path = "../core-tensor" }
core-ops = { version = "0.1.0", path = "../core-ops" }
nn = { version = "0.1.0", path = "../nn" }
optim = { version = "0.1.0", path = "../optim" }
data = { version = "0.1.0", path = "../data" }
serialize = { version = "0.1.0", path = "../serialize" }
rand = "0.8"

