[package]
name = "sptorch-cli-train"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "sptorch-train"
path = "src/main.rs"

[features]
cuda = ["sptorch-core-ops/cuda"]

[dependencies]
sptorch-core-tensor = { version = "0.1.0", path = "../core-tensor" }
sptorch-core-ops = { version = "0.1.0", path = "../core-ops" }
sptorch-nn = { version = "0.1.0", path = "../nn" }
sptorch-optim = { version = "0.1.0", path = "../optim" }
sptorch-data = { version = "0.1.0", path = "../data" }
sptorch-serialize = { version = "0.1.0", path = "../serialize" }
rand = "0.8"

