[package]
name = "distributed"
version = "0.1.0"
edition = "2021"

[dependencies]
core-tensor = { version = "0.1.0", path = "../core-tensor" }
serialize = { version = "0.1.0", path = "../serialize" }
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"
