[package]
name = "sptorch-distributed"
version = "0.1.0"
edition = "2021"

[lib]
name = "sptorch_distributed"

[dependencies]
sptorch-core-tensor = { version = "0.1.0", path = "../core-tensor" }
sptorch-serialize = { version = "0.1.0", path = "../serialize" }
sptorch-hal = { version = "0.1.0", path = "../hal" }
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"
