[package]
name = "live-evolution"
version = "0.1.0"
edition = "2021"

[dependencies]
core-tensor = { path = "../core-tensor" }
core-ops = { path = "../core-ops" }
nn = { path = "../nn" }
optim = { path = "../optim" }
versioning = { path = "../versioning" }
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }
