[package]
name = "sptorch-live-evolution"
version = "0.1.0"
edition = "2021"

[dependencies]
sptorch-core-tensor = { version = "0.1.0", path = "../core-tensor" }
sptorch-core-ops = { version = "0.1.0", path = "../core-ops" }
sptorch-nn = { version = "0.1.0", path = "../nn" }
sptorch-optim = { version = "0.1.0", path = "../optim" }
sptorch-versioning = { version = "0.1.0", path = "../versioning" }
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }
