[package]
name = "sptorch-nn"
version = "0.1.0"
edition = "2021"

[dependencies]
sptorch-core-tensor = { version = "0.1.0", path = "../core-tensor" }
sptorch-core-ops = { version = "0.1.0", path = "../core-ops" }
rand = "0.8"

[dev-dependencies]
sptorch-optim = { version = "0.1.0", path = "../optim" }
