[package]
name = "sptorch"
version = "0.1.0"
edition = "2021"
description = "SPTorch framework facade crate"
license = "MIT"
repository = "https://github.com/hjd92215202/sptorch"
homepage = "https://github.com/hjd92215202/sptorch"
documentation = "https://docs.rs/sptorch"
readme = "README.md"
keywords = ["deep-learning", "tensor", "autograd", "distributed-training", "rust"]
categories = ["science", "algorithms", "hardware-support"]

[dependencies]
sptorch-core-tensor = { version = "0.1.0", path = "../core-tensor" }
sptorch-core-autograd = { version = "0.1.0", path = "../core-autograd" }
sptorch-core-ops = { version = "0.1.0", path = "../core-ops" }
sptorch-nn = { version = "0.1.0", path = "../nn" }
sptorch-optim = { version = "0.1.0", path = "../optim" }
sptorch-data = { version = "0.1.0", path = "../data" }
sptorch-serialize = { version = "0.1.0", path = "../serialize" }
sptorch-hal = { version = "0.1.0", path = "../hal" }
sptorch-hal-ffi = { version = "0.1.0", path = "../hal-ffi" }
sptorch-distributed = { version = "0.1.0", path = "../distributed" }
sptorch-live-evolution = { version = "0.1.0", path = "../live-evolution" }
sptorch-versioning = { version = "0.1.0", path = "../versioning" }
