[package]
name = "text2sql"
version = "0.1.0"
edition = "2021"

[dependencies]
core-tensor = { path = "../core-tensor" }
core-ops = { path = "../core-ops" }
nn = { path = "../nn" }
optim = { path = "../optim" }
serialize = { path = "../serialize" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], default-features = false }
