[package]
name = "cli-text2sql"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sptorch-text2sql"
path = "src/main.rs"

[dependencies]
text2sql = { path = "../text2sql" }
serialize = { path = "../../crates/serialize" }
core-ops = { path = "../../crates/core-ops" }
nn = { path = "../../crates/nn" }
optim = { path = "../../crates/optim" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], default-features = false }
serde_json = "1"
