[package]
name = "cli-text2sql"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "sptorch-text2sql"
path = "src/main.rs"

[dependencies]
text2sql = { path = "../text2sql" }
sptorch = { path = "../../crates/sptorch" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], default-features = false }
serde_json = "1"

