[package]
name = "sptorch-studio"
version = "0.1.0"
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
core-tensor = { path = "../../crates/core-tensor" }
live-evolution = { path = "../../crates/live-evolution" }
hal = { path = "../../crates/hal" }
hal-ffi = { path = "../../crates/hal-ffi" }
optim = { path = "../../crates/optim" }
versioning = { path = "../../crates/versioning" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tauri = { version = "2", features = [] }

[dev-dependencies]
serde_json = "1"

