[package]
name = "sptorch-studio"
version = "0.1.0"
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sptorch-core-tensor = { path = "../../crates/core-tensor" }
sptorch-live-evolution = { path = "../../crates/live-evolution" }
sptorch-hal = { path = "../../crates/hal" }
sptorch-hal-ffi = { path = "../../crates/hal-ffi" }
sptorch-optim = { path = "../../crates/optim" }
sptorch-versioning = { path = "../../crates/versioning" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tauri = { version = "2", features = [] }

[dev-dependencies]
serde_json = "1"

